[package]
name = "bvb2ynab"
version = "0.8.0"
authors = ["Lynoure Braakman <lynoure@gmail.com>"]
description = "A tool for converting Bremische Volksbank CSV files to YNAB format"
readme = "README.md"
license = "MIT"
repository = "https://github.com/lynoure/bvb2ynab"
keywords = ["cli", "budgeting", "banking"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
failure = "0.1.7"
exitfailure = "0.5.1"
regex = "1.3.9"
lazy_static = "1.4.0"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"